Hooking up API for getting the CA Certificate
